assets/styles/src/style.css
/* ... */
/* specific resets */
h1, h2, h3, h4, h5, h6{
	font-size: 1em;
	font-weight: inherit;
	margin-top: 0;
}
	p, ul, ol, blockquote{
		margin-top: 0;
	}

img{
	max-width: 100%;
	height: auto;
}
a{
	text-decoration: none;
	color: inherit;
}

body.no-js ::-webkit-scrollbar{
	display: block !important;
}

.dc-text-arrow{
	position: relative;
	display: inline-block;
	vertical-align: middle;
	height: 1em;
	width: 1em;
}
.dc-text-arrow svg{
	position: relative;
	top: -.1em;
	height: 1em;
	width: 1em;
}
	.dc-text-arrow svg line,
	.dc-text-arrow svg polyline{
		stroke: currentColor;
		stroke-width: 1.4px;
		fill: none;
	}
	.dc-text-arrow.dc-text-arrow__down{
		transform: rotate( 90deg );
	}


/* site styles */

html, body, .dc-site-contents, .layer{
	position: absolute;
	top: 0;
	left: 0;
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100%;
	font-family: "Neue Haas Unica", helvetica, arial, sans-serif;
	font-size: 17px;
	overflow: auto;
	letter-spacing: 0.0005em;
  word-spacing: 0.03em;
}

	@media (min-width: 721px){
		html, body, .dc-site-contents, .layer{
			font-size: 24px;
			/* fontedit */
			font-size: 20px;
		}
	}

	@media( min-width: 1200px ){
		html, body, .dc-site-contents, .layer{
			font-size: 2.1vw;
			/* fontedit */
			font-size: 1.8vw;
		}
	}
	.layer{
		background: #FFFFFF;
	}
	.layer__committee{
		background: #FF0000;
		color: #000000;
		z-index: 5;
		overflow: hidden;
		width: 100%;
		height: 100%;
	}

	.layer__project,
	.layer__post{
		z-index: 15;
	}
	.layer__themes,
	.layer__committee{
		overflow-y: scroll;
		-webkit-overflow-scrolling: touch;
	}

@media (min-width: 721px){
	html, body, .dc-site-contents, .layer{
		overflow: hidden;
	}
	.layer__themes,
	.layer__committee{
		overflow: hidden;
	}
}

	body.home .layer__project,
	body.home .layer__post,
	body.home .layer__committee{
		opacity: 0;
		pointer-events: none;
	}
	body.single-post .layer__project,
	body.single-post .layer__committee,
	body.page-template-page-dc-quadrant .layer__project,
	body.page-template-page-dc-quadrant .layer__committee{
		opacity: 0;
		pointer-events: none;
	}
	body.single-dc_project .layer__committee,
	body.single-dc_project .layer__post{
		opacity: 0;
		pointer-events: none;
	}

	body.page-template-page-about .layer__post,
	body.page-template-page-about .layer__project{
		opacity: 0;
		pointer-events: none;
	}

	/* body.single-post .committee-header,
	body.single-dc_project .committee-header,
	body.page-template-page-dc-quadrant .committee-header{
		display: none;
	} */

.committee-header{
	position: fixed;
	z-index: 10;
	box-sizing: border-box;
	z-index: 99;
	left: auto;
  top: auto;
	top: 1.05rem;
  right: 0.9rem;
  background: transparent;
  width: 1.31rem;
  height: 0.8rem;
  padding: 0;
	transition: filter .13s ease-in-out;
}
	.committee-header h1{
		margin-bottom: 0;
		width: 100%;
		height: 100%;
		pointer-events: painted;
		position: relative;
	}
		.committee-header h1 svg{
			position: absolute;
			top: 0;
			width: 100%;
		}
			.committee-header h1 svg path{
				fill: #000000;
				transition: fill .3s ease-in-out;
			}
		.committee-header--logo__full,
		.committee-header--logo__small{
			display: none;
		}
	.committee-header.invert h1 svg path{
		fill: #FFFFFF;
	}
	.committee-header span{
		display: none;
	}


	@media (min-width: 721px){
		.committee-header:hover,
		.committee-header.unscrolled,
		body.page-template-page-about-php .committee-header{
			height: 9.4rem;
		}
		.committee-header--logo__full{
			display: none;
		}
		.committee-header--logo__small{
			display: block;
		}

		.committee-header:hover .committee-header--logo__full,
		.committee-header.unscrolled .committee-header--logo__full,
		body.page-template-page-about-php .committee-header .committee-header--logo__full{
			display: block;
		}
		.committee-header:hover .committee-header--logo__small,
		.committee-header.unscrolled .committee-header--logo__small,
		body.page-template-page-about-php .committee-header .committee-header--logo__small{
			display: none;
		}
		body.home .committee-header h1 svg path,
		body.dc_tax_topics-networks .committee-header h1 svg path,
		body.loading .committee-header h1 svg path{
			fill: #FFFFFF;
		}
		body.loading .committee-header--logo__full{
			display: block;
		}
		body.loading .committee-header--logo__small{
			display: none;
		}


	}

.theme{
	background-color: #FFFFFF;
	color: #000000;
	background-position: center;
	background-size: cover;
  background-attachment: fixed;
}

	.theme.theme__networks{
		background-color: #000000;
		color: #FFFFFF;
		border-right: none;
	}
	.theme.theme__networks a{
		color: #FFFFFF;
	}
		.theme .theme--content{
			background-color: #FFFFFF;
			/* NO SHADOW
			-webkit-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
														inset 0px 0px 18px 3px rgba(100,100,100,0.85);
				 -moz-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
														inset 0px 0px 18px 3px rgba(100,100,100,0.85);
							box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
														inset 0px 0px 18px 3px rgba(100,100,100,0.85);
														*/
		}
		.theme__networks,
		.theme.theme__networks .theme--content{
			background-color: #000000;
			/* NO SHADOW
			-webkit-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
														inset 0px 0px 15px 3px rgba(180,180,180,0.85);
				 -moz-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
														inset 0px 0px 15px 3px rgba(180,180,180,0.85);
							box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
														inset 0px 0px 15px 3px rgba(180,180,180,0.85);
														*/
		}

	.theme .theme--image-cover{
		display: none;
		width: 100%;
		height: 200px;
		background-position: top center;
		background-size: cover;
		background-attachment: fixed;
		/* -moz-transform-origin: 0 0;
		transform: translateZ(0); */
	}
		html.b-FFX .theme .theme--image-cover{
			filter: none !important;
		}
/* ... */

